<resources>
    <string name="app_name">تسجيل يتيم</string>
    <string name="yatim_selection_criteria">معايير اختيار الأيتام</string>
    <string name="head_of_the_family">بيانات رب الأسرة</string>
    <string name="guardian_of_the_orphan">ولي أمر اليتيم</string>
    <string name="mother">الأم</string>
    <string name="other">أخرى</string>
    <string name="refugee_status">حالة اللجوء</string>
    <string name="mother_name">اسم الأم</string>
    <string name="refugee">لاجئ</string>
    <string name="non_refugee">غير لاجئ</string>
    <string name="mother_date_of_birth">تارخ ميلاد الأم</string>
    <string name="mother_marital_status">الحالة الاجتماعية للأم</string>
    <string name="marital_status">الحالة الاجتماعية</string>
    <string name="family_situation">الحالة الاجتماعية</string>
    <string-array name="educational_level">
        <item name="choose">اختر</item>
        <item name="university">جامعي</item>
        <item name="secondary">ثانوي</item>
        <item name="intermediate">متوسط</item>
        <item name="acquaintance">ملمة</item>
        <item name="illiteracy">أمية</item>
        <item name="joined">ملتحقة</item>
        <item name="complete_education">ترغب بإكمال تعليمها</item>
    </string-array>
    <string-array name="university_education">
        <item name="choose">اختر</item>
        <item name="master">ماجستير</item>
        <item name="bachelor">بكالوريس</item>
        <item name="diploma">دبلوم</item>
    </string-array>
    <string name="specialization">التخصص</string>
    <string name="graduation_year">عام التخرج</string>
    <string name="average">المعدل</string>
    <string name="parents_name">اسم ولي الأمر</string>
    <string name="parents_id">رقم الهوية</string>
    <string name="parents_date_of_birth">تاريخ ميلاد ولي الأمر</string>
    <string name="relationship_with_the_orphan">علاقة ولي الامر باليتيم</string>
    <string name="housing_condition">حالة السكن</string>
    <string name="space">المساحة(م2)</string>
    <string-array name="house_location">
        <item>اختر</item>
        <item>أرضى</item>
        <item>دور أول</item>
        <item>دور ثاني</item>
        <item>دور ثالث</item>
        <item>دور رابع</item>
        <item>دور خامس</item>
        <item>أخرى</item>
    </string-array>
    <string name="people_for_rooms">عدد الأفراد لعدد الغرف</string>
    <string name="rooms_number">عدد الغرف</string>
    <string name="member_number">عدد أفراد الأسرة</string>
    <string-array name="housing_type">
        <item>اختر</item>
        <item>منزل</item>
        <item>شقة</item>
        <item>خيمة</item>
        <item>مأوي مؤقت</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="roof_type">
        <item>اختر</item>
        <item>باطون</item>
        <item>معدني</item>
        <item>أسبست</item>
        <item>خشب</item>
        <item>قماش</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="property">
        <item>اختر</item>
        <item>ملك</item>
        <item>إيجار</item>
        <item>مع الأهل</item>
        <item>مع غير الأهل</item>
        <item>أرض وقف</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="wall_type">
        <item>اختر</item>
        <item>باطون</item>
        <item>معدني</item>
        <item>أسبست</item>
        <item>خشب</item>
        <item>قماش</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="floor_type">
        <item>اختر</item>
        <item>بلاط</item>
        <item>باطون</item>
        <item>رملية</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="windows_case">
        <item>اختر</item>
        <item>ممتازة</item>
        <item>جيدة</item>
        <item>متوسطة</item>
        <item>سيئة</item>
        <item>سيئة جدا</item>
        <item>بحاجة لترميم</item>
    </string-array>
    <string-array name="doors_case">
        <item>اختر</item>
        <item>ممتازة</item>
        <item>جيدة</item>
        <item>متوسطة</item>
        <item>سيئة</item>
        <item>سيئة جدا</item>
        <item>بحاجة لترميم</item>
    </string-array>
    <string-array name="kitchen_condition">
        <item>اختر</item>
        <item>ممتازة</item>
        <item>جيدة</item>
        <item>متوسطة</item>
        <item>سيئة</item>
        <item>سيئة جدا</item>
        <item>بحاجة لترميم</item>
    </string-array>
    <string-array name="bathroom_condition">
        <item>اختر</item>
        <item>ممتازة</item>
        <item>جيدة</item>
        <item>متوسطة</item>
        <item>سيئة</item>
        <item>سيئة جدا</item>
        <item>بحاجة لترميم</item>
    </string-array>
    <string-array name="housing_condition_in_general">
        <item>اختر</item>
        <item>ممتازة</item>
        <item>جيدة</item>
        <item>متوسطة</item>
        <item>سيئة</item>
        <item>سيئة جدا</item>
        <item>بحاجة لترميم</item>
    </string-array>
    <string-array name="improvement_needs">
        <item>اختر</item>
        <item>ترميم</item>
        <item>صيانة</item>
        <item>أثاث</item>
        <item>أجهزة</item>
        <item>إنشاء</item>
        <item>ترميم خاص بإحتياجات المعاقين</item>
    </string-array>
    <string-array name="furniture_needs">
        <item>اختر</item>
        <item>فراشي</item>
        <item>كراسي</item>
        <item>طاولة</item>
        <item>خزانة ملابس</item>
        <item>أدوات مطبخ</item>
    </string-array>
    <string-array name="hardware_needs">
        <item>اختر</item>
        <item>ثلاجة</item>
        <item>غسالة</item>
        <item>فرن غاز</item>
        <item>غاز</item>
        <item>جرة</item>
        <item>مروحة</item>
        <item>مدفأة</item>
    </string-array>
    <string name="lighting">الإنارة</string>
    <string name="ventilation">التهوية</string>
    <string name="electricity">شبكة الكهرباء</string>
    <string name="Water_network">شبكة المياه</string>
    <string name="alternative_electricity">كهربا بديلة</string>
    <string name="Sewage">الصرف الصحي</string>
    <string name="excellent">ممتازة</string>
    <string name="good">جيدة</string>
    <string name="medium">متوسطة</string>
    <string name="bad">سيئة</string>
    <string name="very_bad">سيئة جدا</string>
    <string name="need_restoration">بحاجة لترميم</string>
    <string name="need_repair">بحاجة لإصلاح</string>
    <string name="exist">يوجد</string>
    <string name="not_exist">لا يوجد</string>
    <string name="water_hygiene_hygienicPractices">المياه و النظافة و الممارسات الصحية</string>
    <string name="tank_capacity_for_household_consumption">سعة الخزانات للاستهلاك المنزلي باللتر</string>
    <string name="number">العدد</string>
    <string name="drinking_water_tanks_capacity">سعة خزانات مياه الشرب باللتر</string>
    <string name="Liter">لتر</string>
    <string-array name="domestic_water_source">
        <item>اختر</item>
        <item>شبكة البلدية</item>
        <item>حنفية عامة</item>
        <item>بئر زراعي/منزلي</item>
        <item>غير متصلة</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="source_of_drinking_cookingWater">
        <item>اختر</item>
        <item>مياه بلدية</item>
        <item>فلتر مياه</item>
        <item>بئر زراعي/منزلي</item>
        <item>شاحنة مياه</item>
        <item>من الدكان</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="number_of_municipal_days_water_arrived">
        <item>اختر</item>
        <item>يوم واحد</item>
        <item>2-3 يوم</item>
        <item>3-7 يوم</item>
        <item>غير متصلة</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="do_he_need_any_of_the_following">
        <item>اختر</item>
        <item>فلتر مياه</item>
        <item>موتور مياه</item>
        <item>سخان شمسي</item>
        <item>خزان</item>
        <item>سخان مياه(قيزر,أتمور)</item>
    </string-array>
    <string-array name="condition_of_cleanliness_arrangement">
        <item>اختر</item>
        <item>ممتازة</item>
        <item>جيدة</item>
        <item>متوسطة</item>
        <item>سيئة</item>
        <item>سيئة جدا</item>
    </string-array>
    <string name="economic_aspect">الجانب الاقتصادي :</string>
    <string name="head_family_work">هل يعمل رب الاسرة</string>
    <string name="work_nature">طبيعة العمل</string>
    <string name="average_monthly_income">متوسط الدخل الشهري بالشيكل</string>
    <string name="family_debts">هل لدى الأسرة ديون؟</string>
    <string name="accumulated_college_loans">هل هناك قروض جامعية متراكمة؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string-array name="family_income_sources">
        <item>اختر</item>
        <item>مصادر دخل الأسرة</item>
        <item>رب الأسرة لا يعمل</item>
        <item>راتب أو معاش</item>
        <item>شؤون MoSD</item>
        <item>مساعدات وكالة الغوث</item>
        <item>كفالات</item>
        <item>أخرى</item>
    </string-array>
    <string-array name="family_financial_situation">
        <item>اختر</item>
        <item>الوضع المالي للأسرة</item>
        <item>ممتاز</item>
        <item>جيد</item>
        <item>متوسط</item>
        <item>سئ</item>
        <item>سئ جدا</item>
    </string-array>
    <string-array name="family_property">
        <item>اختر</item>
        <item>ممتلكات الأسرة</item>
        <item>ثروة حيوانية</item>
        <item>أرض سكنية</item>
        <item>ماكينات</item>
        <item>دفيئة زراعية</item>
        <item>أخرى</item>
    </string-array>
    <string name="basic_information">المعلومات الأساسية لليتيم</string>
    <string name="add_yatims">إضافة يتيم</string>
    <string name="yatim_name">اسم اليتيم رباعي</string>
    <string name="yatim_date_of_birth">تاريخ الميلاد</string>
    <string name="gender">الجنس</string>
    <string name="father_death_date">تاريخ وفاة الأب</string>
    <string name="cause_of_death">سبب الوفاة</string>
    <string name="age_at_death">السن عند الوفاة</string>
    <string name="job">المهنة</string>
    <string name="previous_income">الدخل السابق</string>
    <string name="inheritance_or_pension">الإرث او المعاش</string>
    <string name="mobile_number">رقم الجوال</string>
    <string name="add_mobile_number">إضافة رقم جوال</string>
    <string name="conservation">المحافظة/تفاصيل العنوان</string>
    <string name="yatim_health_status">الحالة الصحية لليتيم</string>
    <string name="height">الطول</string>
    <string name="weight">الوزن</string>
    <string name="has_a_lock">لديه تأمين</string>
    <string name="status_since">الحالة منذ</string>
    <string name="birth">الولادة</string>
    <string name="disease_name">اسم المرض</string>
    <string name="mental_disorder_type">نوع الاضطراب النفسي</string>
    <string name="health_condition">الحالة الصحية</string>
    <string name="healthy">معافي</string>
    <string name="unhealthy">غير معافي</string>
    <string name="male">ذكر</string>
    <string name="educational_status">الحالة التعليمية</string>
    <string name="yatim_desires_inclinations">رغبات و ميول </string>
    <string name="family_members">أفراد الأسرة</string>
    <string name="photo_iD">صورة هوية</string>
    <string name="certificate_of_deceased">شهادة المتوفي</string>
    <string name="birth_certificate">شهادة ميلاد</string>
    <string name="picture">صورة شخصية</string>
    <string name="custody_declaration">إقرار حضانة</string>
    <string name="guardianship_image">صورة وصاية</string>
    <string name="school_certificate_image">صورة شهادة المدرسة</string>
    <string name="salary_slip_if_any">قسيمة راتب إن وجد</string>
    <string name="next">التالى</string>
    <string name="email_address">الايميل</string>
    <string name="password">كلمة المرور</string>
    <string name="signin">تسجيل الدخول</string>
    <string name="forgot_password">نسيت كلمة المرور</string>
    <string name="don_not_have_an_account">ليس لديك حساب ؟</string>
    <string name="create_new_now">إنشاء حساب جديد</string>
    <string name="add_attachments_fragment">إضافة المرفقات</string>
    <string name="back">السابق</string>
</resources>